<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pixel Art</string>

    <!-- General ActionBar Actions-->
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_layers">Layers</string>
    <string name="action_grid">Grid</string>
    <string name="action_tool">Tools</string>
    <string name="action_palette">Palette</string>
    <string name="action_new_drawing">New drawing</string>
    <string name="action_export">Export</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_select_all">Select all</string>
    <string name="action_new_palette">New palette</string>
    <string name="action_delete_palette">Delete palette</string>
    <string name="action_add_frame">Add frame</string>
    <string name="action_duplicate_frame">Duplicate frame</string>
    <string name="action_delete">Delete</string>

    <!-- Text -->
    <string name="text_export_success">Drawing exported</string>
    <string name="text_export_failure">Export failed</string>
    <string name="text_load_dialog_title">Choose a drawing</string>
    <string name="text_new_drawing">New drawing</string>


    <!-- Tools -->
    <string name="tool_pen">Pen</string>
    <string name="tool_eraser">Eraser</string>
    <string name="tool_rect">Rectangle</string>
    <string name="tool_oval">Oval</string>
    <string name="tool_rect_select">Rectangular Selection</string>
    <string name="tool_flood_fill">Flood Fill</string>
    <string name="tool_dropper">Colour Dropper</string>
    <string name="tool_magic_wand">Magic Wand</string>
    <string name="tool_free_select">Free Selection</string>

    <!-- Tool Options -->
    <string name="tool_option_straight">Straight</string>
    <string name="tool_option_lock_angles">Lock Angles</string>
    <string name="tool_option_aa">Soften Edges</string>
    <string name="tool_option_circle_lock">Lock to Circle</string>
    <string name="tool_option_inner_fill">Inner Fill</string>
    <string name="tool_option_square_lock">Lock to Square</string>
    <string name="tool_option_rounded">Round Corners</string>
    <string name="tool_option_threshold">Threshold</string>

    <!-- Buttons -->
    <string name="button_customise_palette">Customise</string>
    <string name="button_next_palette">Next Palette</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <!--Colour Picker Spaces-->
    <string name="label_opacity">Opacity</string>

    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>

    <string name="label_hue">Hue</string>
    <string name="label_saturation">Saturation</string>
    <string name="label_lightness">Lightness</string>

    <!-- Layers -->
    <string name="layer">Layer</string>
    <string name="layer_add">Add Layer</string>
    <string name="layer_remove">Remove Layer</string>
    <string name="layer_merge">Merge Layer</string>

    <!-- Undo title strings -->
    <array name="undo_titles">
        <item>@string/tool_pen</item>
        <item>"Add layer"</item>
        <item>"Delete layer"</item>
        <item>"Merge layer"</item>
    </array>


</resources>
