<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >

    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_undo" />

    <item android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_redo" />

    <item android:id="@+id/action_tool_pen"
        android:title="@string/tool_pen"
        android:orderInCategory="30"
        android:showAsAction="never" />

    <item android:id="@+id/action_tool_flood_fill"
        android:title="@string/tool_flood_fill"
        android:orderInCategory="31"
        android:showAsAction="never" />

    <item android:id="@+id/action_tool_oval"
        android:title="@string/tool_oval"
        android:orderInCategory="32"
        android:showAsAction="never" />

    <item android:id="@+id/action_grid"
        android:title="@string/action_grid"
        android:orderInCategory="33"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
