<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tool"
        android:icon="@drawable/tool_pen"
        android:orderInCategory="1"
        android:title="@string/action_tool"
        compat:showAsAction="always" />

    <item
        android:id="@+id/action_palette"

        android:orderInCategory="2"
        android:title="@string/action_palette"
        compat:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="3"
        android:title="@string/action_undo"
        compat:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_action_redo"
        android:orderInCategory="4"
        android:title="@string/action_redo"
        compat:showAsAction="ifRoom" />

    <!-- TODO: Layers disabled until issues resolved -->
    <!-- <item
        android:id="@+id/action_layers"
        android:icon="@drawable/ic_action_layers"
        android:orderInCategory="5"
        android:title="@string/action_layers"
        app:showAsAction="never" /> -->


    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/ic_action_grid_off"
        android:orderInCategory="25"
        android:title="@string/action_grid"
        compat:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_drawing"
        android:orderInCategory="30"
        android:title="@string/action_new_drawing"
        compat:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="31"
        android:title="@string/action_export"
        compat:showAsAction="never" />

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /> -->


</menu>
