<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rotate"
        android:icon="@drawable/ic_action_rotate"
        android:orderInCategory="1"
        android:title="@string/action_rotate"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="2"
        android:title="@string/action_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_action_cut"
        android:orderInCategory="3"
        android:title="@string/action_cut"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="4"
        android:title="@string/action_copy"
        app:showAsAction="always" />

</menu>