<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cp_colour_picker"
        android:layout_alignLeft="@+id/et_opacity"
        android:layout_alignRight="@+id/et_opacity"
        android:layout_below="@+id/et_opacity"
        android:background="@color/accent_colour" />

    <com.jaween.pixelart.ui.colourpicker.ColourPickerView
        android:id="@+id/cp_colour_picker"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@+id/et_hue"
        android:layout_alignParentLeft="true"
        android:indeterminate="false"
        android:padding="@dimen/view_margin" />

    <EditText
        android:id="@+id/et_opacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/cp_colour_picker"
        android:ems="2"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="3"
        android:text="255" />

    <com.jaween.pixelart.util.AbsVerticalSeekBar
        android:id="@+id/sb_opacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_opacity"
        android:indeterminate="false"
        android:max="255"
        android:progress="255" />

    <EditText
        android:id="@+id/et_hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_saturation"
        android:layout_alignParentRight="true"
        android:ems="2"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="3"
        android:text="359" />

    <SeekBar
        android:id="@+id/sb_hue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_hue"
        android:layout_alignLeft="@+id/sb_saturation"
        android:layout_toLeftOf="@+id/et_hue"
        android:indeterminate="false"
        android:max="359"
        android:progress="0" />

    <TextView
        android:id="@+id/tv_hue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_hue"
        android:layout_alignTop="@+id/sb_hue"
        android:gravity="center_vertical"
        android:text="@string/label_hue" />

    <EditText
        android:id="@+id/et_saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_lightness"
        android:layout_alignParentRight="true"
        android:ems="2"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="2"
        android:text="99" />

    <SeekBar
        android:id="@+id/sb_saturation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_saturation"
        android:layout_toLeftOf="@+id/et_saturation"
        android:layout_toRightOf="@+id/tv_saturation_label"
        android:indeterminate="false"
        android:max="99"
        android:progress="99" />

    <TextView
        android:id="@+id/tv_saturation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_saturation"
        android:layout_alignTop="@+id/sb_saturation"
        android:gravity="center_vertical"
        android:text="@string/label_saturation" />

    <EditText
        android:id="@+id/et_lightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ems="2"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="2"
        android:text="50" />

    <SeekBar
        android:id="@+id/sb_lightness"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_lightness"
        android:layout_alignLeft="@+id/sb_saturation"
        android:layout_toLeftOf="@+id/et_lightness"
        android:indeterminate="false"
        android:max="99"
        android:progress="50" />

    <TextView
        android:id="@+id/tv_lightness_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_lightness"
        android:layout_alignTop="@+id/sb_lightness"
        android:gravity="center_vertical"
        android:text="@string/label_lightness" />

    <TextView
        android:id="@+id/tv_colour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cp_colour_picker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="I THINK IT&apos;S NOT TOO BAD"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>